# zkir-wasm-experiment

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh  keygen-cli.mjs  package.json  test.sh  zkir-keygen.d.ts
.cargo/: config.toml
pkg/: midnight_zkir_keygen_wasm.d.ts  midnight_zkir_keygen_wasm_bg.wasm  midnight_zkir_keygen_wasm_bg.wasm.d.ts  package.json
src/: lib.rs  provider.rs
tests/: web.rs
webapp/: package-lock.json  package.json  serve.sh  webpack.config.js  wrangler.jsonc
webapp/assets/: midnight_zkir_keygen_wasm.js  scheme.js  scheme.wasm
webapp/functions/srs/: [[path]].js
webapp/public/: index.html  zswap.html
webapp/src/: compiler.js  crypto-shim.js  deploy.js  index.js  keygen.js  ws-shim.js  zswap.js
